--- a/lsd/Cargo.toml
+++ b/lsd/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Veloya <archaic.archea@gmail.com"]
 edition = "2018"
 
 [dependencies]
+bitflags = "1.3.2"
 log = "0.4"
 sbi = "0.2.0"
 spin = "0.9"
