--- a/lsd/Cargo.toml
+++ b/lsd/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 bitflags = "1.3.2"
 fdt = "0.1.4"
 log = "0.4"
+mmio = "2.1.0"
 sbi = "0.2.0"
 spin = "0.9"
-syscon-rs = "0.1.0"
+syscon-rs = "0.1.1"
